--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
 body {
   background-color: #f7f7f7;
   padding: 5rem;
+  font-size: 1.5rem;
 }
 
 h3 {
@@ -53,6 +54,15 @@ button {
 
 .login,
 .signup {
+  width: 50%;
   padding: 2rem;
   background-color: #fff;
+}
+
+.form-errors-container {
+  color: #fa8072;
+}
+
+.form-errors-container p {
+  margin-bottom: 0.5rem;
 }
