--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,16 @@ button {
   background-color: #fff;
 }
 
-.form-errors-container {
+.form-messages-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form-messages-container .error {
   color: #fa8072;
 }
 
-.form-errors-container p {
-  margin-bottom: 0.5rem;
+.form-messages-container .success {
+  color: #2ecc71;
 }
